--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="profile">Profile</string>
     <string name="message">Message</string>
     <string name="group_chat">Group Chat</string>
+    <string name="log_out">Log Out</string>
 </resources>
